@@ -31,7 +31,7 @@
  
 */
 
-#include "config.h"
+#include <config.h>
 
 #include <string.h>
 #include <unistd.h>
